_theme_toggle fixed, dark mode toc

--- a/resources/css/components/docs.css
+++ b/resources/css/components/docs.css
@@ -42,7 +42,7 @@
 /* Table of Contents */
 /* -------------------------------------------------- */
 .toc {
-    @apply py-1 ml-0 space-y-4 text-black font-display;
+    @apply py-1 ml-0 space-y-4 text-black dark:text-white font-display;
     list-style-type: none;
     counter-reset: item;
 
@@ -59,14 +59,14 @@
     }
 
     li ol {
-        @apply my-2 ml-2 space-y-2 text-slate-500;
+        @apply my-2 ml-2 space-y-2 text-gray-500 dark:text-gray-300;
         counter-reset: item;
 
         li { @apply text-sm ; }
         li:before {
             position: absolute;
             margin: 7px -12px;
-            content: url("data: image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' class='mr-2 overflow-visible text-slate-400 group-hover:text-slate-600 dark:text-slate-600 dark:group-hover:text-slate-500' %3E%3Cpath d='M0 0L3 3L0 6' fill='none' stroke='%23871FFF' stroke-width='1.5' stroke-linecap='round' %3E%3C/path%3E%3C/svg%3E");
+            content: url("data: image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' class='mr-2 overflow-visible text-gray-400 group-hover:text-gray-600 dark:text-gray-600 dark:group-hover:text-gray-500' %3E%3Cpath d='M0 0L3 3L0 6' fill='none' stroke='%23871FFF' stroke-width='1.5' stroke-linecap='round' %3E%3C/path%3E%3C/svg%3E");
         }
     }
 }
